[gd_scene load_steps=9 format=2]

[ext_resource path="res://Script/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Zombi.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Zombi_n.png" type="Texture" id=3]
[ext_resource path="res://12168.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/Light_al.png" type="Texture" id=5]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 3.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 100 )
initial_velocity = 1.0
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_random = 1.0
color = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -10, -8 ), Vector2( 1, -12 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 1.75, 1.75 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 2 )
normal_map = ExtResource( 3 )
hframes = 2

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
position = Vector2( -2.56856, 0.580199 )
scale = Vector2( 0.849899, 0.883125 )
polygon = PoolVector2Array( 2.9127, -0.802768, 5.39699, 8.66928, -1.85037, 10.4023, -6.68905, 8.65602, -8.20114, 4.07215, -10.4693, -1.31209, -7.66196, -9.5207, -1.8198, -12.2327, 4.29728, -9.78529 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -0.321281, 0.83533 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 5.54816, 1.0326 )
scale = Vector2( 1.15002, 1.13319 )
polygon = PoolVector2Array( 3.35502, 4.94356, -7.75589, 6.78108, -12.0138, 6.2774, -14.0253, 1.62769, -14.0812, -4.43962, -11.5669, -9.88318, -7.20121, -10.4138, 3.54211, -7.01795, -3.81664, -1.44857 )

[node name="Anim" type="Timer" parent="."]
wait_time = 0.1

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
position = Vector2( -6.09427, 0 )
emitting = false
amount = 50
lifetime = 7.0
one_shot = true
speed_scale = 8.0
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 1 )

[node name="Death" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 1.0
margin_top = -12.0
margin_right = 16.0
margin_bottom = 3.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "+10"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 5 )
texture_scale = 1.6
color = Color( 0.134033, 0.953125, 0.146832, 1 )
range_height = 50.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Anim" to="." method="_on_Anim_timeout"]
[connection signal="timeout" from="Death" to="." method="_on_Death_timeout"]
